[tool.poetry]
name = "rulesraker"
version = "0.1.0"
description = ""
authors = ["Maximilian Remming <maximilian@remming.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
